# moonshot-proxy

./: .gitignore  Cargo.toml  README.md  init-example-custom.json  init-moonshot.json  init-openai.json  init.json  manifest.toml  sample-request.json  wkg.toml
src/: bindings.rs  lib.rs  tests.rs
src/api/: openai.rs
src/handlers/: message.rs  mod.rs
src/types/: api.rs  conversion.rs  mod.rs  response.rs  state.rs
wit/: world.wit
